--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
   </div>
 </div>
 <script defer src="/src/js/material.min.js"></script>
+<script src="/src/js/idb.js"></script>
+<script src="/src/js/dbUtility.js"></script>
 <script src="/src/js/app.js"></script>
 <script src="/src/js/feed.js"></script>
 </body>
